# ReviewFlow

./: .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: frontend-ci.yml
Backend/: docker-compose.yml  dockerfile  pyproject.toml
Backend/alembic/: env.py
Backend/alembic/versions/: 0307922d01e5_update_business_model.py  6326a695219d_init.py
Backend/app/: main.py
Backend/app/api/: deps.py
Backend/app/api/v1/: router.py
Backend/app/api/v1/routes/: auth.py  business.py  profile.py  review.py
Backend/app/api/v1/routes/google/: auth.py  google.py
Backend/app/core/: config.py  database_helper.py  security.py
Backend/app/models/: __init__.py  business.py  review.py
Backend/app/repositories/: __init__.py  business_repo.py  profile_repo.py  review_repo.py
Backend/app/schemas/: __init__.py  auth.py  business.py  profile.py  review.py
Backend/app/services/: __init__.py  auth_service.py  jwt_service.py  profile_service.py  review_service.py
Frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
Frontend/src/app/: App.tsx  main.tsx
Frontend/src/app/providers/: AppProviders.tsx
Frontend/src/app/router/: ProtectedRoute.tsx  index.ts  router.tsx
Frontend/src/pages/campaigns/: CampaignsPage.tsx  index.ts
Frontend/src/pages/customers/: CustomersPage.tsx
Frontend/src/pages/feedback-list/: FeedbackListPage.tsx
Frontend/src/pages/home/: HomePage.tsx
docs/: git-workflow-fork.md  git-workflow.md
(+31 files in other folders)
