[project]
name = "reviewflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "authlib>=1.7.2",
    "fastapi>=0.136.1",
    "google-auth>=2.52.0",
    "greenlet>=3.5.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.13.3",
    "python-jose>=3.5.0",
    "uvicorn>=0.46.0",
]
