[project]
name = "reviewflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "greenlet>=3.5.0",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.14.0",
    "uvicorn>=0.46.0",
]
